fix(ui): fix playground UI, improve code highlighting, and refine authentication guards
- Adjusts playground component HTML to use full width.
- Updates Prism.js loading in `index.html` to ensure Prism is available after script load and handles potential loading errors.
- Adds scrollbar to code blocks and adjusts code styling in `styles.scss`.
- Refactors `LoginGuard` and `authGuard` to use `AuthService` for authentication checks, improving guard logic.
- Adds host binding to `AppScrapeComponent` for styling.
- Improves the layout and responsiveness of the `AppScrapeComponent`'s HTML template, including result display and closing functionality.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -170,6 +170,15 @@ html {
     .prose :where(strong):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
         @apply text-gray6 dark:text-white;
     }
+    pre[class*="language-"] {
+        @include core.scrollbar;
+    }
+
+    code[class*="language-"] {
+        max-width: 53rem;
+        display: block;
+        width: min-content;
+    }
 
     // .prose :where(h1, h2, h3, h4, h5, h6, th):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
     //     @apply no-underline;
